add_subdirectory(algo)
add_subdirectory(array)
add_subdirectory(base)
# add_subdirectory(cli)
add_subdirectory(dci)
# add_subdirectory(env)
# add_subdirectory(func)
# add_subdirectory(gof)
# add_subdirectory(list)
# add_subdirectory(log)
# add_subdirectory(mem)
# add_subdirectory(string)
# add_subdirectory(task)